# ZGloom-Android

./: README.md
sources/app/: build.gradle  proguard-rules.pro
sources/app/src/main/: AndroidManifest.xml
sources/app/src/main/assets/ZGloom/deluxe/pics/: combat  combat.pal  hell  hell.pal  spacehulk  spacehulk.pal  theend
sources/app/src/main/assets/ZGloom/pics/: theend.pal
sources/app/src/main/cpp/: CMakeLists.txt
sources/app/src/main/cpp/ZGloom/: ConfigOverlays.cpp  config.cpp  config.h  font.h  gamelogic.cpp  gloommap.cpp  hud.h  menuscreen.cpp  menuscreen.h  renderer.h  script.cpp  soundhandler.cpp  titlescreen.cpp  titlescreen.h  zgloom.cpp  zgloom.cpp.bak
sources/app/src/main/cpp/ZGloom/audio/: EmbeddedBGM.cpp
sources/app/src/main/cpp/ZGloom/effects/: FilmGrainOverlay.h  FrameLimiter.h  MuzzleFlashFX.h  RendererHooks.cpp  RendererHooks.h  ScanlineOverlay.h  VignetteOverlay.h
sources/app/src/main/java/com/ast/zgloom/: MainActivity.java  ZGloomActivity.java
sources/app/src/main/java/org/libsdl/app/: HIDDeviceManager.java  SDLActivity.java  SDLControllerManager.java  SDLSurface.java
sources/app/src/main/res/layout/: activity_main.xml
sources/app/src/main/res/values/: strings.xml  styles.xml
sources/gradle/wrapper/: gradle-wrapper.properties
